[tool.poetry]
name = "bot-videos"
version = "0.1.0"
description = ""
authors = ["Rodrigo <rodriguinhobettiojr1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.20.0"
google-generativeai = "^0.7.1"
openai = "^1.35.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
